--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./skin/style_icon.css">
     <link rel="stylesheet" href="./skin/index.css">
     <script src="./skin/nutui.umd.4.3.8.js"></script>
-    <title>腾达娱乐</title>
+    <title>腾达国际</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <link rel="icon" href="./skin/0544aa35b27947c89122b31183d19d04.png" type="image/png">
@@ -81,7 +81,7 @@
                     <div class="msg-bar">
                         <div class="marquee-container">
                             <div class="marquee">
-                                欢迎来到腾达娱乐！上下分联系BV房间在线客服，私下转账造成资金损失一率与本群无关，营业时间:早上9点开盘至凌晨4点结束，祝老板们天天盈利！
+                                欢迎来到腾达国际！上下分联系BV房间在线客服，私下转账造成资金损失一率与本群无关，营业时间:早上9点开盘至凌晨4点结束，祝老板们天天盈利！
                             </div>
                         </div>
                     </div>
